--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <div class="content">
         <h1>Explore in AR</h1>
         <p>Interact with this 3D model in real-time.</p>
-        <model-viewer src="model.glb" 
-                      ios-src="model.usdz" 
+        <model-viewer src="scan.glb" 
+                      ios-src="scan.usdz" 
                       alt="3D Model" 
                       ar 
                       auto-rotate 
