--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Topological Map AR</title>
+    <title> Neue Dimensionen im Kostümdesign - Leon Luca Körösi, HAW, MOKOTEX, 2596897</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -17,57 +17,73 @@
             background: #121212;
             color: white;
             height: 100vh;
-            position: relative;
+            overflow: hidden;
         }
 
         .content {
             text-align: center;
-            z-index: 1;
-            background: rgba(0, 0, 0, 0.7);
             padding: 20px;
-            border-radius: 10px;
+            border-radius: 15px;
+            backdrop-filter: blur(8px);
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 1s forwards;
+        }
+
+        @keyframes fadeInUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .content h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             margin-bottom: 10px;
+            letter-spacing: 1px;
         }
 
         .content p {
-            font-size: 1.2rem;
+            font-size: 1rem;
             margin-bottom: 20px;
+            opacity: 0.8;
         }
 
         button {
-            padding: 12px 24px;
+            padding: 10px 20px;
             font-size: 1rem;
             color: #ffffff;
             background: rgba(255, 255, 255, 0.2);
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             transition: all 0.3s ease;
+            backdrop-filter: blur(5px);
         }
 
         button:hover {
-            background: rgba(255, 255, 255, 0.4);
+            background: rgba(255, 255, 255, 0.3);
+            transform: scale(1.05);
         }
 
-        canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
+        model-viewer {
             width: 100%;
-            height: 100%;
-            z-index: -1;
-            opacity: 0.3;
+            max-width: 500px;
+            height: 500px;
+            opacity: 0;
+            animation: fadeIn 1.5s forwards 0.5s;
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
 <body>
-    <canvas id="topoCanvas"></canvas>
     <div class="content">
-        <h1>Explore in AR</h1>
+        <h1>Neue Dimensionen im Kostümdesign</h1>
         <p>Interact with this 3D model in real-time.</p>
         <model-viewer src="scan.glb" 
                       ios-src="scan.usdz" 
@@ -80,43 +96,6 @@
     </div>
 
     <script>
-        const canvas = document.getElementById("topoCanvas");
-        const ctx = canvas.getContext("2d");
-
-        let width, height, time = 0;
-
-        function resizeCanvas() {
-            width = canvas.width = window.innerWidth;
-            height = canvas.height = window.innerHeight;
-        }
-        window.addEventListener("resize", resizeCanvas);
-        resizeCanvas();
-
-        function generateNoise(x, y, time, scale = 0.005) {
-            return Math.sin((x * scale + y * scale + time * 0.005) * Math.PI * 2);
-        }
-
-        function drawContours() {
-            ctx.clearRect(0, 0, width, height);
-            ctx.strokeStyle = "rgba(255, 255, 255, 0.3)";
-            ctx.lineWidth = 1;
-
-            const step = 40;
-            for (let x = 0; x < width; x += step) {
-                for (let y = 0; y < height; y += step) {
-                    const noise = generateNoise(x, y, time) * 10;
-                    ctx.beginPath();
-                    ctx.moveTo(x, y);
-                    ctx.lineTo(x + noise, y + noise);
-                    ctx.stroke();
-                }
-            }
-            time += 1;
-            requestAnimationFrame(drawContours);
-        }
-
-        drawContours();
-
         function activateAR() {
             alert("AR mode activated!");
         }
