--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             max-width: 100%;
             height: auto;
             min-height: 300px;
+            --ar-button-display: none; /* Versteckt den standard AR-Button */
         }
 
         @media (max-width: 768px) {
