--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
             height: 100vh;
             overflow: hidden;
             padding: 10px;
+            position: relative;
+        }
+
+        /* Topografische Hintergrund-Animation */
+        .background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle at center, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0) 70%);
+            background-size: cover;
+            animation: animateBackground 8s infinite alternate ease-in-out;
+            z-index: -1;
+        }
+
+        @keyframes animateBackground {
+            0% {
+                transform: scale(1);
+            }
+            100% {
+                transform: scale(1.1);
+            }
         }
 
         .content {
@@ -30,6 +53,8 @@
             transform: translateY(20px);
             animation: fadeInUp 1s forwards;
             max-width: 90%;
+            position: relative;
+            z-index: 1;
         }
 
         @keyframes fadeInUp {
@@ -52,31 +77,32 @@
         }
 
         .custom-button {
-            padding: 12px 24px;
+            padding: 10px 22px;
             font-size: 1rem;
             color: #ffffff;
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1));
-            border: none;
-            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.15);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50px;
             cursor: pointer;
             transition: all 0.3s ease;
-            backdrop-filter: blur(5px);
-            width: 100%;
-            max-width: 300px;
-            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(8px);
+            width: auto;
+            display: inline-block;
+            box-shadow: none;
         }
 
         .custom-button:hover {
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.2));
+            background: rgba(255, 255, 255, 0.25);
             transform: scale(1.05);
         }
 
         model-viewer {
             width: 100%;
-            max-width: 100%;
-            height: auto;
-            min-height: 300px;
+            max-width: 500px;
+            height: 400px;
             --ar-button-display: none; /* Versteckt den standard AR-Button */
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
         }
 
         @media (max-width: 768px) {
@@ -88,27 +114,28 @@
             }
             model-viewer {
                 min-height: 250px;
+                max-width: 90%;
             }
             .custom-button {
-                padding: 10px 20px;
+                padding: 8px 18px;
                 font-size: 0.9rem;
             }
         }
     </style>
 </head>
 <body>
+    <div class="background"></div>
     <div class="content">
         <h1>Neue Dimensionen im Kostümdesign</h1>
         <p>Interact with this 3D model in real-time.</p>
         <model-viewer src="scan.glb" 
                       ios-src="scan.usdz" 
-                      alt="3D Model" 
-                      ar 
+                      alt="3D Model Preview" 
                       auto-rotate 
                       camera-controls 
                       autoplay>
         </model-viewer>
-        <button class="custom-button" onclick="document.querySelector('model-viewer').activateAR()">🔍 View in AR</button>
+        <button class="custom-button" onclick="document.querySelector('model-viewer').activateAR()">View in AR</button>
     </div>
 </body>
 </html>
