--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background: #121212;
             color: white;
             height: 100vh;
-            overflow: hidden;
+            overflow: auto;
             padding: 10px;
             position: relative;
         }
@@ -52,9 +52,9 @@
         }
 
         model-viewer {
-            width: 100%;
-            max-width: 500px;
-            height: 500px;
+            width: 80%;
+            max-width: 400px;
+            height: 400px;
             --ar-button-display: none;
             background: transparent;
             border-radius: 0;
@@ -65,7 +65,7 @@
         }
 
         .custom-button {
-            margin-top: 10px;
+            margin-top: 20px;
             padding: 12px 24px;
             font-size: 1rem;
             color: #ffffff;
@@ -89,12 +89,13 @@
                 font-size: 1.5rem;
             }
             model-viewer {
-                min-height: 300px;
+                height: 320px;
                 max-width: 90%;
             }
             .custom-button {
                 padding: 10px 20px;
                 font-size: 0.9rem;
+                margin-bottom: 20px;
             }
         }
     </style>
